--- a/main/config.toml
+++ b/main/config.toml
@@ -1,3 +1,4 @@
-baseURL = "http://example.org/"
+baseURL = "http://teddyheinen.com/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "About Me | Teddy Heinen"
+theme = "skyshayde"
